plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ar.training'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-r2dbc'
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Migration tool driver (Optional, only if using Flyway/Liquibase)
	runtimeOnly 'org.postgresql:r2dbc-postgresql'
	testRuntimeOnly 'org.postgresql:r2dbc-postgresql'

	testImplementation 'org.springframework.boot:spring-boot-starter-webflux-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-r2dbc-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-r2dbc-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'org.testcontainers:testcontainers-postgresql'
	testImplementation 'org.testcontainers:testcontainers-r2dbc'

}

tasks.named('test') {
	useJUnitPlatform()
}
